--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>My Video</h1>
     <video width="600" controls>
-        <source src="video.mp4" type="video/mp4">
+        <source src="https://github.com/cemorum/metadata_storage/blob/main/SBT_support.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
